Fixed the spacing

--- a/resources/css/education.css
+++ b/resources/css/education.css
@@ -1,182 +1,182 @@
 @font-face {
-  font-family: OpenSans-SemiBold;
-  src: url(fonts/OpenSans-SemiBold.ttf)
+    font-family: OpenSans-SemiBold;
+    src: url(fonts/OpenSans-SemiBold.ttf)
 }
 
 a, a:visited {
-  color:black;
-  text-decoration: none;
-  padding: 20px;
+    color:black;
+    text-decoration: none;
+    padding: 20px;
 }
 
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 li {
-  display: inline-block;
-  margin-left: 17px;
-  margin-right: 17px;
+    display: inline-block;
+    margin-left: 17px;
+    margin-right: 17px;
 }
 
 .scrollPage {
-  overflow: auto;
+    overflow: auto;
 }
 
 .header {
-  font-family: OpenSans-SemiBold;
-  font-size: 22px;
-  display: table;
-  margin: auto;
+    font-family: OpenSans-SemiBold;
+    font-size: 22px;
+    display: table;
+    margin: auto;
 }
 
 .space {
-  grid-area: space;
+    grid-area: space;
 }
 
-.lets-deal {
-  background-color: rgb(237, 240, 244);
-  font-family: OpenSans-SemiBold;
-  padding: 15px;
-  grid-gap: 10px; /*grid gap matters especially if we have more than text and title, such as images or graphs*/
-  margin-top: 20px;
-  margin-bottom: 20px;
-  display: grid;
-  grid-template-areas:
-  'title text'
-  'image text'
-  'image2 text';
-  grid-template-columns: 40% 50%;
-  border-radius: 10px;
+.letsDeal {
+    background-color: rgb(237, 240, 244);
+    font-family: OpenSans-SemiBold;
+    padding: 15px;
+    grid-gap: 10px; /*grid gap matters especially if we have more than text and title, such as images or graphs*/
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-areas:
+    'title text'
+    'image text'
+    'image2 text';
+    grid-template-columns: 40% 50%;
+    border-radius: 10px;
 }
 
 .dealImage {
-  grid-area: image;
-  display: flex;
-  position: relative;
-  justify-self: center;
-  border-radius: 10px;
+    grid-area: image;
+    display: flex;
+    position: relative;
+    justify-self: center;
+    border-radius: 10px;
 }
 
 .dealImage2 {
-  grid-area: image2;
-  display: flex;
-  position: relative;
-  justify-self: center;
-  border-radius: 10px;
+    grid-area: image2;
+    display: flex;
+    position: relative;
+    justify-self: center;
+    border-radius: 10px;
 }
 
-.standard-monty {
-  font-family: OpenSans-SemiBold;
-  padding: 15px;
-  display: grid;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  grid-template-areas:
-  'space text title'
-  'space text title';
-  grid-template-columns: 10% 50% 40%;
+.standardMonty {
+    font-family: OpenSans-SemiBold;
+    padding: 15px;
+    display: grid;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    grid-template-areas:
+    'space text title'
+    'space text title';
+    grid-template-columns: 10% 50% 40%;
 }
 
 .misconceptions {
-  background-color: rgb(237, 240, 244);
-  font-family: OpenSans-SemiBold;
-  padding: 15px;
-  display: grid;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  grid-template-areas:
-  'title text'
-  'title text';
-  grid-template-columns: 40% 50%;
-  border-radius: 10px;
+    background-color: rgb(237, 240, 244);
+    font-family: OpenSans-SemiBold;
+    padding: 15px;
+    display: grid;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    grid-template-areas:
+    'title text'
+    'title text';
+    grid-template-columns: 40% 50%;
+    border-radius: 10px;
 }
 
 .variants {
-  font-family: OpenSans-SemiBold;
-  padding: 15px;
-  display: grid;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  grid-template-areas:
-  'space tabs title'
-  'space text title';
-  grid-template-columns: 10% 50% 40%;
-  grid-auto-flow: row;
+    font-family: OpenSans-SemiBold;
+    padding: 15px;
+    display: grid;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    grid-template-areas:
+    'space tabs title'
+    'space text title';
+    grid-template-columns: 10% 50% 40%;
+    grid-auto-flow: row;
 }
 
 .resources {
-  background-color: rgb(237, 240, 244);
-  font-family: OpenSans-SemiBold;
-  padding: 15px;
-  display: grid;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  grid-template-areas:
-  'title text'
-  'title text';
-  grid-template-columns: 40% 50%;
-  border-radius: 10px;
+    background-color: rgb(237, 240, 244);
+    font-family: OpenSans-SemiBold;
+    padding: 15px;
+    display: grid;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    grid-template-areas:
+    'title text'
+    'title text';
+    grid-template-columns: 40% 50%;
+    border-radius: 10px;
 }
 
 .title {
-  grid-area: title;
-  font-size: 35px;
-  display: flex;
-  position: relative;
-  justify-content: center;
-  align-items: center;
+    grid-area: title;
+    font-size: 35px;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
 }
 
 .text {
-  grid-area: text;
-  font-size: 18px;
-  padding: 10px;
-  margin: 20px;
-  display: flex;
-  position: relative;
-  text-align: center;
-  align-items: center;
+    grid-area: text;
+    font-size: 18px;
+    padding: 10px;
+    margin: 20px;
+    display: flex;
+    position: relative;
+    text-align: center;
+    align-items: center;
 }
 
 .tabs {
-  grid-area: tabs;
-  display: flex;
-  position: relative;
-  text-align: center;
-  align-items: center;
-  justify-self: center;
+    grid-area: tabs;
+    display: flex;
+    position: relative;
+    text-align: center;
+    align-items: center;
+    justify-self: center;
 }
 
 .monty {
-  font-family: OpenSans-SemiBold;
-  display: none;
-  grid-area: text;
-  position: relative;
-  justify-self: center;
-  text-align: center;
+    font-family: OpenSans-SemiBold;
+    display: none;
+    grid-area: text;
+    position: relative;
+    justify-self: center;
+    text-align: center;
 }
 
 .tabs button {
-  font-size: 30px;
-  background-color: inherit;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
+    font-size: 30px;
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
 }
 
 .tabs button:hover {
-  background-color: rgb(246,248,250);
+    background-color: rgb(246,248,250);
 }
 
 .tabs button.active {
-  background-color: rgb(237, 240, 244);
+    background-color: rgb(237, 240, 244);
 }
 
 .variantTitle {
-  font-size: 23px;
+    font-size: 23px;
 }
 
 .variantText {
-  font-size: 18px;
+    font-size: 18px;
 }
